--- a/app/views/quiz/result.html.erb
+++ b/app/views/quiz/result.html.erb
@@ -1,6 +1,18 @@
 <h1>結果</h1>
 <p>あなたのスコアは<%= @score %>点です！</p>
 
+<p>正解</p>
+<p> "約束された勝利の剣", "えくすかりばー" </p>
+<p> "全て遠き理想郷", "あゔぁろん" </p>
+<p> "煉天覆う七つの円卓", "ろーあいあす" </p>
+<p> "天地乖離す開闢の星", "えぬまえりしゅ" </p>
+<p> "刺し穿つ死棘の槍", "げいぼるく" </p>
+<p> "騎英の手綱", "べるれふぉーん" </p>
+<p> "破壊すべき全ての府", "るーるぶれいかー" </p>
+<p> "射殺す百頭", "ないんらいぶず" </p>
+<p> "妄想心音", "ざばーにーや" </p>
+<p> "無限の剣製", "あんりみてっどぶれいどわーくす" </p>
+
 <%= link_to "Twitterで共有する", "https://twitter.com/share?url=#{root_url}&text=私のFate宝具クイズスコアは#{@score}点でした！#ミニアプリWeek", target: "_blank" %>
 <br>
 <%= link_to "リトライ", root_path %>
